# ThisAPIOfMine

./: .gitignore  Cargo.toml  deps.txt  tsom_api_config.toml.default
.github/workflows/: build.yml
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/taom-database/: Cargo.toml
crates/taom-database-macro/: Cargo.toml
crates/taom-database-macro/src/: attribute.rs  lib.rs
crates/taom-database/src/: config.rs  error.rs  from_row.rs  lib.rs  map.rs  prepare.rs  query.rs
database/: 0_inital.sql
src/: config.rs  deku_helper.rs  fetcher.rs  game_data.rs  main.rs
src/data/: connection_token.rs  game_data_token.rs  mod.rs
src/database/: mod.rs  queries.rs
src/errors/: api.rs  codes.rs  mod.rs
src/routes/: connection.rs  game_server.rs  mod.rs  players.rs  version.rs
