[package]
name = "this_api_of_mine"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-governor = "0.10"
actix-web = "4.9"
base64 = "0.22"
cached = { version = "0.56", features = ["async"] }
const_base = "0.2"
chacha20poly1305 = { version = "0.10", features = ["std"] }
confy = "2.0"
deadpool-postgres = "0.14"
deku = "0.20"
env_logger = "0.11"
futures = "0.3"
jsonwebtoken = "10.2"
log = "0.4"
octocrab = "0.49"
rand_core = "0.6.4"
reqwest = { version = "0.13", features = ["charset", "http2"], default-features = false }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
secure-string = { version = "0.3", features = ["serde"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9", features = ["base64", "time_0_3"] }
tokio = "1.39"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
url = "2.5"
uuid = { version = "1.16", features = ["v4", "macro-diagnostics", "serde"] }
